# snowseer

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: markdown-link-check-config.json
.github/workflows/: lint.yml  test.yml
_archive/data/: fetch_mapillary_video.py  find_snow_for_video.py  find_snow_sequences.py  manual_result_curation.json  manual_snow_curation.json  preview_sequence.py
_archive/docs/: slides.md
_archive/notebooks/: 02_video_walkthrough.ipynb
_archive/src/: audit.py  layouts.py
assets/audio/: _synthesize_ambient.py
assets/style/: _render_preview.py
data/: _extend_curated_with_review_pool.py  _migrate_curated_v1_to_v2.py  curate_pairs.py  curated_pairs.json  demo_pairs.json  fetch_mapillary.py  find_snow_sequences.py  manual_result_curation.json
demo/: curate_results.py  curate_snow.py  streamlit_app.py
docs/: analysis.ipynb  audit.md  audit_log.md  external_datasets.md  index.html  slides.md  submission_video_plan.md  writeup.md
docs/_assets/: README.md
docs/assets/: README.md
docs/style/: marp.css  site.css  style.md
notebooks/: 01_walkthrough.ipynb
outputs/heroes/: INDEX.md  summary.json
src/: audit.py  build_slides.py  fuse.py  homography.py  make_video.py  matching.py  overlay.py  pipeline.py  segmentation.py  snow_quality.py  video.py
src/data/: demo_pairs.json  fetch_cadc.py  fetch_mapillary.py  find_snow_sequences.py
src/video_runtime/: _match_test.py  augment.py  compose_final.py  extract_assets.py  render.py  (+9 more)
tests/: test_fuse_v3.py  test_homography_diversity.py  test_smoke.py
(+25 files in other folders)
