[project]
name = "street-view-matching"
version = "0.1.0"
description = "Cross-season image matching for snow-plough autonomy. Minimal-shot perception by transferring road segmentation from clear-weather priors to snowy queries."
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "kornia>=0.7.3",
    "kornia-rs",
    "transformers>=4.44",
    "opencv-python>=4.10",
    "numpy<2",
    "pillow>=10",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "tqdm>=4.66",
    "streamlit>=1.38",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "moviepy>=2.2.1",
]

[tool.uv]
package = false
